fix(docs): add scrollbar to toc
fix #847

--- a/docs/src/components/Toc.module.css
+++ b/docs/src/components/Toc.module.css
@@ -1,4 +1,10 @@
 /* purgecss start ignore */
+
+.contents__list {
+  overflow: overlay;
+  height: calc(((100vh - 4.5rem) - 64px) - 42px);
+}
+
 .contents__link {
   @apply text-gray-700;
 }
